...
						<reference key="destination" ref="191373211"/>
					</object>
					<int key="connectionID">3</int>
				</object>
				<object class="IBConnectionRecord">
					<object class="IBCocoaTouchOutletConnection" key="connection">
						<string key="label">detailLabel</string>
						<reference key="source" ref="372490531"/>
						<reference key="destination" ref="583865764"/>
					</object>
					<int key="connectionID">5</int>
				</object>
			</array>
...
